<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">vCard</string>
    <string name="action_settings">Settings</string>
    <string name="contacts_generator">vCard generator</string>
    <string name="contacts_count_label">contacts</string>
    <string name="contacts_count_hint">How many</string>
    <string name="contacts_face_count_label">avators</string>
    <string name="contacts_face_count_hint">How many, 0 if default</string>
    <string name="open_file_failed">open file failed</string>
    <string name="no_more_contacts_number">no more than 100000 contacts</string>
    <string name="no_external_storage">no external storage</string>
    <string name="vcard_generated_failed">vcard generated failed</string>
    <string name="no_empty_in_contacts_field">number of contacts should not be empty</string>
    <string name="submit">confirm</string>
    <string name="more_settings">more settings↓</string>
    <string name="more_settings_fold">more settings↑</string>
    <string name="keyback_hint">press again to exit</string>
    
    <string name="same_contacts_vcard">the same contacts</string>
    <string name="contact_name">name</string>
    <string name="phone_1">phone 1, default empty</string>
    <string name="phone_2">phone 2, default empty</string>
    <string name="count">input count</string>
    
    <string name="normal_contacts_vcard">vCard contacts</string>
    <string name="contacts_with_avator_vcard">contacts with avator</string>
    <string name="contacts_count">contacts count</string>
    <string name="contain_phone_count">contain phone count, max 3</string>
    
    <string name="repeat_contacts_allowed">repeat contacts allowed</string>
    <string name="more_numbers_allowed">more numbers allowed</string>
    
    <string name="loading_dialog_title">generate vcard</string>
    <string name="loading_dialog_message">please wait.......</string>
    
    <string name="select_avators">Select avators</string>
    <string name="local_images">Local images</string>
    <string name="network_images">Network images</string>
    <string name="load_more">load more</string>
</resources>