<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="28sp"
        android:text="@string/same_contacts_vcard" />
    
    <com.newhope.contactsvcard.ClearEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"  
        android:paddingTop="10dp"
        android:paddingBottom="10dp" 
        android:drawableRight="@drawable/delete_selector"
        android:background = "#00000000"
        android:singleLine="true"
        android:hint="@string/contact_name" />

        
    <com.newhope.contactsvcard.ClearEditText
        android:id="@+id/phone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"  
        android:paddingRight="10dp"   
        android:paddingTop="10dp"
        android:paddingBottom="10dp" 
        android:drawableRight="@drawable/delete_selector"
        android:background = "#00000000"
        android:singleLine="true"
        android:inputType="phone"
        android:hint="@string/phone_1" />
    
    <com.newhope.contactsvcard.ClearEditText
        android:id="@+id/phone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"  
        android:paddingRight="10dp"   
        android:paddingTop="10dp"
        android:paddingBottom="10dp" 
        android:drawableRight="@drawable/delete_selector"
        android:background = "#00000000"
        android:singleLine="true"
        android:inputType="phone"
        android:hint="@string/phone_2" />
    
    <com.newhope.contactsvcard.ClearEditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"  
        android:paddingRight="10dp"   
        android:paddingTop="10dp"
        android:paddingBottom="10dp" 
        android:drawableRight="@drawable/delete_selector"
        android:background = "#00000000"
        android:singleLine="true"
        android:inputType="number"
        android:hint="@string/count" />
        
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="8dp"
        android:textSize="28sp"
        android:background="@drawable/submit_button_selector"
        android:textColor="#FFFFFFFF"
    android:text="@string/submit" />

</LinearLayout>
